# application

./: .gitignore  README.md  bot.py  etherscan_api_test.py  pyproject.toml  scrapped_info.json  scrapping.py  settings.py  transaction_analysis.ipynb
dataset/etherium/: full_data.csv
notebooks/: dune_analysis.ipynb  queries.txt  recsystem.ipynb
scrapping/: airdrop_wallets.csv  cache.json  debank_scrapper.py  etherscan_scrapper.py  https.txt  settings.py
